8251986: [lworld] implement Class::valueType and Class::referenceType in Java
Reviewed-by: rriggs